# anki-importer

./: .gitignore  LICENSE  README.md  config.yml  install.ps1  install.sh  main.py  pyproject.toml  questions.md
configs/: mcq_ultimate_v2.yml
manual_tests/: manual_test_basic_cards.yml
stuff/: ubuntu_install.sh
tests/: test_importer.py
